k8s/koinos/base/chain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: chain
  name: chain
  namespace: koinos
spec:
  replicas: 1
  selector:
    matchLabels:
      service: chain
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: chain
    spec:
      containers:
        - args:
            - --basedir=/koinos
          image: koinos/koinos-chain:v1.1.0
          name: chain
          volumeMounts:
            - name: koinos-data5
              mountPath: /koinos
      restartPolicy: Always
      volumes:
        - name: koinos-data5
          persistentVolumeClaim:
            claimName: koinos-data5
