k8s/koinos/base/config-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: config
  name: config
  namespace: koinos
spec:
  replicas: 1
  selector:
    matchLabels:
      service: config
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: config
    spec:
      containers:
        - env:
            - name: DESCRIPTORS_TAG
              value: master
          image: elimbatido/koinos-config:v1.0.0
          name: config
          volumeMounts:
            - name: koinos-data2
              mountPath: /koinos
      restartPolicy: Always
      volumes:
        - name: koinos-data2
          persistentVolumeClaim:
            claimName: koinos-data2
