k8s/koinos/base/contract-meta-store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: contract-meta-store
  name: contract-meta-store
  namespace: koinos
spec:
  replicas: 1
  selector:
    matchLabels:
      service: contract-meta-store
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: contract-meta-store
    spec:
      containers:
        - args:
            - --basedir=/koinos
          image: koinos/koinos-contract-meta-store:v1.0.0
          name: contract-meta-store
          volumeMounts:
            - name: koinos-data2
              mountPath: /koinos
      restartPolicy: Always
      volumes:
        - name: koinos-data2
          persistentVolumeClaim:
            claimName: koinos-data2
