k8s/koinos/base/transaction-store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: transaction-store
  name: transaction-store
  namespace: koinos
spec:
  replicas: 1
  selector:
    matchLabels:
      service: transaction-store
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: transaction-store
    spec:
      containers:
        - args:
            - --basedir=/koinos
          image: koinos/koinos-transaction-store:v1.0.0
          name: transaction-store
          volumeMounts:
            - name: koinos-data5
              mountPath: /koinos
      restartPolicy: Always
      volumes:
        - name: koinos-data5
          persistentVolumeClaim:
            claimName: koinos-data5
