k8s/koinos/base/jsonrpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jsonrpc
  name: jsonrpc
  namespace: koinos
spec:
  ports:
    - name: "80"
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    service: jsonrpc
