k8s/koinos/base/monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: koinos-monitor
  name: koinos-monitor
  namespace: koinos
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    service: koinos-monitor
