k8s/koinos/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koinos-ingress
  namespace: koinos
  annotations:
    cert-manager.io/cluster-issuer: "cert-manager-webhook-dnsimple-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jsonrpc.koiner.app
      secretName: koiner-jsonrpc-tls
  defaultBackend:
    service:
      name: jsonrpc
      port:
        number: 8080
  rules:
    - host: jsonrpc.koiner.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jsonrpc
                port:
                  number: 8080
